# trollbot

./: .gitignore  Cargo.toml  LICENSE  todo.txt
config/: channels.list  commands.map
data/: bros.list  choosing_beggars.list  cities.list  commands_text.map  editor_responses.list  editors.list  foods.list  game_descriptions.list  game_responses.list  games.list  go_away.list  goodbyes.list  goodbyes_responses.list  greetings.list  insults.list  job_searchers.list  jokes.list  language_responses.list  languages.list  laughs.list  mom_jokes.list  objects.list  passive_advice.list  place_responses.list  places.list  questions.list  switch_case_brace_responses.list  triggers.map
pplm_config/: input_channels.list
rules_config/: channels.list  commands.map
src/: config.rs  file_help.rs  list.rs  main.rs  main_pplm.rs  main_rules.rs  map.rs
