[package]
name = "cynobot"
version = "0.1.0"
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { version = "0.14", features = [ "async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots" ] }
anyhow = "1.0"
tokio = { version = "0.2", features = ["full", "tracing", "time"] }
rand = "0.8"
