[package]
name = "cynobot"
version = "0.1.0"
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { version = "0.14", features = [ "async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots" ] }
anyhow = "1.0"
tokio = { version = "0.2", features = [ "full", "tracing", "time" ] }
rand = "0.8.4"
strum = { version = "0.24", features = ["derive"] }
itertools = "0.10"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
dirs = "4.0.0"
